# HarmonyosAkiDemo

./: README.md
MyOhosAkiDemo/: oh-package.json5
MyOhosAkiDemo/AppScope/: app.json5
MyOhosAkiDemo/AppScope/resources/base/element/: string.json
MyOhosAkiDemo/entry/src/main/cpp/: CMakeLists.txt  CppEngine.cpp  CppEngine.h  OhosAkiAdapter.cpp  OhosAkiDefine.h
MyOhosAkiDemo/entry/src/main/cpp/types/libentry/: index.d.ts
MyOhosAkiDemo/entry/src/main/ets/pages/: Index.ets
